# Pompeii

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompileShaders.cmake  CopyFolder.cmake  CopyModels.cmake  CopyTextures.cmake  FetchAndIncludeLibraries.cmake
project/: CMakeLists.txt  main.cpp
project/shaders/: autoexposure.comp  blit.frag  brdf_lut.frag  constants.glsl  cubemap.frag  cubemap.vert  deferred.frag  deferred.vert  depthprepass.frag  depthprepass.vert  diffuse_irradiance.frag  fullscreenTri.vert  generate_luminance_histogram.comp  get_average_luminance.comp  helpers.glsl  helpers_exposure.glsl  helpers_general.glsl  helpers_lighting.glsl  lighting.frag  shader.frag  shader.vert  shadowmap.vert  specular_irradiance.frag
project/src/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  ConsoleTextSettings.h  Context.h  Debugger.cpp  Debugger.h  DeletionQueue.cpp  DeletionQueue.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Material.cpp  Material.h  Model.cpp  Model.h  PhysicalDevice.cpp  PhysicalDevice.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Sampler.cpp  Sampler.h  (+11 more)
project/src/EDITOR/: Editor.cpp  Editor.h  EditorUI.cpp  EditorUI.h
project/src/ENGINE/helper/: ServiceLocator.h
project/src/ENGINE/managers/: AssetManager.cpp  AssetManager.h
project/src/ENGINE/scene/: Scene.cpp  Scene.h
project/src/ENGINE/scene/base/: SceneManager.cpp  SceneManager.h
project/src/ENGINE/scene/components/: Camera.cpp  Camera.h  Component.cpp  Component.h  LightComponent.cpp  LightComponent.h  MeshFilter.cpp  MeshFilter.h  MeshRenderer.cpp  MeshRenderer.h  ModelRenderer.cpp  ModelRenderer.h
project/src/ENGINE/scene/sceneobject/: SceneObject.cpp  SceneObject.h  Transform.cpp  Transform.h
project/src/ENGINE/systems/: LightingSystem.cpp  LightingSystem.h  RenderSystem.cpp  RenderSystem.h
project/src/RENDERER/context/: Context.h  Instance.h
project/src/RENDERER/core/: Renderer.cpp  Renderer.h  Window.cpp
project/src/RENDERER/datatypes/: GPUCamera.h  Light.cpp  Light.h  Material.h  Mesh.h  Shapes.h
project/src/RENDERER/graphics/memory/: Buffer.h  GBuffer.cpp  Image.cpp  Image.h
project/src/RENDERER/graphics/passes/: BlitPass.cpp  BlitPass.h  DepthPrePass.cpp  DepthPrePass.h  GeometryPass.h  LightingPass.h  ShadowPass.cpp  UIPass.cpp  UIPass.h
project/src/RENDERER/graphics/pipeline/: DescriptorPool.h  RenderPass.cpp  RenderPass.h
project/src/RENDERER/helper/: Debugger.cpp  Debugger.h
project/src/RENDERER/presentation/: SwapChain.cpp  SwapChain.h
project/src/commands/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h
project/src/context/: Context.h  Device.cpp  Device.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h
project/src/core/: IWindow.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
project/src/datatypes/: EnvironmentMap.cpp  Light.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderInstance.h  RenderingItems.h  Shapes.cpp  Shapes.h
project/src/graphics/memory/: Buffer.cpp  Buffer.h  GBuffer.cpp  GBuffer.h  Image.cpp  Image.h  Sampler.cpp  Sampler.h  SyncManager.cpp  SyncManager.h
project/src/graphics/passes/: BlitPass.cpp  BlitPass.h  DepthPrePass.cpp  DepthPrePass.h  ForwardPass.cpp  ForwardPass.h  GeometryPass.cpp  GeometryPass.h  LightingPass.cpp  LightingPass.h  ShadowPass.cpp  ShadowPass.h  UIPass.cpp  UIPass.h
project/src/graphics/pipeline/: DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h
project/src/helper/: Debugger.cpp  Debugger.h  DeletionQueue.cpp  DeletionQueue.h  RenderDebugger.cpp  RenderDebugger.h  ServiceLocator.h  Timer.cpp  Timer.h
project/src/presentation/: SwapChain.cpp  SwapChain.h
project/src/scene/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  EnvironmentMap.cpp  EnvironmentMap.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Scene.cpp  Scene.h
project/src/scene/base/: SceneManager.cpp  SceneManager.h
project/src/scene/components/: Camera.cpp  Camera.h  Component.cpp  Component.h  Light.cpp  Light.h  LightComponent.cpp  LightComponent.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h
project/src/scene/sceneobject/: SceneObject.cpp  SceneObject.h  Transform.cpp  Transform.h
project/src/systems/: ISystem.h  LightingSystem.cpp  LightingSystem.h  RenderSystem.cpp  RenderSystem.h
shaders/: shader.vert
